src/objects/Eligibility_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>With Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Without contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Subscription_Rule__c</fullName>
        <label>Contract / Subscription Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Contract End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription End Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>With Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Without Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Platform__c</fullName>
        <label>Current Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All-In-One</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>New customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Eligibility Rule</label>
        <referenceTo>Promotion_Eligibility_Rule__c</referenceTo>
        <relationshipLabel>Eligibility Rules</relationshipLabel>
        <relationshipName>Eligibility_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUPJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSJA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subsciber_Status__c</fullName>
        <label>Subscriber Status</label>
        <picklist>
            <controllingField>Customer_Status__c</controllingField>
            <picklistValues>
                <fullName>New Subscriber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Eligibility Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Eligibility Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>All_Required_fields_are_populated</fullName>
        <active>true</active>
        <description>Required fields:
- Eligibility Rule Name
- Customer Status
These fields must be populated before the Eligibility Rule can be saved</description>
        <errorConditionFormula>ISPICKVAL(Customer_Status__c , &quot;&quot;) || ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Customer_Status__c</errorDisplayField>
        <errorMessage>Required Fields are not populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Subscription_Rule_on_Contract</fullName>
        <active>true</active>
        <description>Contract / Subscription Rule must not be Contract End Date if Action = &quot;Can Add&quot;</description>
        <errorConditionFormula>AND( ISPICKVAL( Contract_Subscription_Rule__c, 
                 &quot;Contract End Date&quot;),
      ISPICKVAL( Action__c , &quot;Add&quot;) )</errorConditionFormula>
        <errorMessage>Contract / Subscription Rule must be Subscription End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Subscription_Rule_on_Contract_2</fullName>
        <active>true</active>
        <description>Contract / Subscription Rule must be N/A if Action= &quot;Add&quot;</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Contract_Status__c, 
                 &quot;With Contract&quot;),
       ISPICKVAL(Contract_Status__c, 
                 &quot;Without contract&quot;)),
       ISPICKVAL( Action__c , &quot;Add&quot;))</errorConditionFormula>
        <errorMessage>&quot;Contract&quot; field must be NA if Action = &quot;Can Add&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dates_Validation</fullName>
        <active>true</active>
        <description>Check the Start Date must not be later than the End Date</description>
        <errorConditionFormula>Effective_Start_Date__c &gt;  Effective_End_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_Start_Date__c</errorDisplayField>
        <errorMessage>Check the Effective Start Date must not be later than the Effective End Date</errorMessage>
    </validationRules>
</CustomObject>